--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="keywords" content="人工智能导航，AI导航，ChatGPT，通用人工智能，有趣，极客，效率工具，极客导航, 创意工作者导航, truer.ai">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>AI-navigation</title>
+    <title>geek-navigation</title>
   </head>
   <body>
     <noscript>
